2016-04-11 Fred Gleason <fredg@paravelsystems.com>
	* Initial package creation.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented metering and monitoring controls.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a statistics display.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassmonitor/glassmonitor.cpp' that caused
	the section divider to be drawn only between the first two monitor
	strips.
2016-04-12 Fred Gleason <fredg@paravelsystems.com>
	* Implemented a summary alarm indicator.
2016-04-28 Fred Gleason <fredg@paravelsystems.com>
	* Added an e-mail alert subsystem.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make rpm' target.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Added icons in 'icons/'.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.0.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a rule to 'glassmonitor.spec.in' to install a sample
	configuration file.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Added 'stream connected' and 'stream disconnected' e-mail
	alerts.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Changed behavior for a failed stream at start-up to attempt
	reconnects every five seconds.
2016-05-02 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.1.
2016-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Modified glassmonitor(1) to not start jackd(1) if no command line
	is specified in glassmonitor.conf(5).
2016-05-03 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/glassmonitor/montiro.cpp' so that network errors and
	player instance crashes are reported via e-mail alert rather than
	local message dialog.
2016-05-06 Fred Gleason <fredg@paravelsystems.com>
	* Modified 'src/glassmonitor.cpp' and 'src/monitor.cpp' to make them
	fully resizeable.