@@ -39,3 +39,6 @@
 2016-05-06 Fred Gleason <fredg@paravelsystems.com>
 	* Modified 'src/glassmonitor.cpp' and 'src/monitor.cpp' to make them
 	fully resizeable.
+2016-05-06 Fred Gleason <fredg@paravelsystems.com>
+	* Tweaked the positioning of the meter labels in
+	'src/glassmonitor/playmeter.cpp'.
